<resources>
    <string name="app_name">TimeReminder</string>

    <!-- - - - - - - - - - - -->
    <!-- Used in UI          -->
    <!-- - - - - - - - - - - -->

    <!-- Top and bottom texts on main view -->
    <string name="header_label">Time you have left</string>
    <string name="footer_label">Spend it wisely</string>

    <!-- Time labels on the main view -->
    <string name="seconds_label">seconds</string>
    <string name="minutes_label">minutes</string>
    <string name="hours_label">hours</string>
    <string name="days_label">days</string>
    <string name="years_label">years</string>

    <!-- Message to show if setting are not yet set up -->
    <string name="no_data_available">Please, set up the settings first</string>

    <!-- Message to show on incorrect input -->
    <string name="incorrect_input">Please select a whole number between 0 and 150</string>

    <!-- Menu items -->
    <string name="menu_settings">Settings</string>

    <!-- - - - - - - - - - - -->
    <!-- Used by Preferences -->
    <!-- - - - - - - - - - - -->

    <!-- Preference categories -->
    <string name="prefs_general_settings_title">General Settings</string>
    <string name="prefs_visual_settings_title">Visibility Settings</string>

    <!-- Date of birth preference -->
    <string name="prefs_date_of_birth_title">Date of birth</string>
    <string name="prefs_date_of_birth_key" translatable="false">date_of_birth</string>

    <!-- Life expectancy preference -->
    <string name="prefs_life_expectancy_title">Life expectancy in years</string>
    <string name="prefs_life_expectancy_key" translatable="false">life_expectancy</string>

    <!-- Preference to show number of minutes -->
    <string name="prefs_show_minutes_title">Show minutes</string>
    <string name="prefs_show_minutes_key" translatable="false">show_minutes</string>

    <!-- Preference to show number of hours -->
    <string name="prefs_show_hours_title">Show hours</string>
    <string name="prefs_show_hours_key" translatable="false">show_hours</string>

    <!-- Preference to show number of days -->
    <string name="prefs_show_days_title">Show days</string>
    <string name="prefs_show_days_key" translatable="false">show_days</string>

    <!-- Preference to show number of years -->
    <string name="prefs_show_years_title">Show years</string>
    <string name="prefs_show_years_key" translatable="false">show_years</string>

    <!-- Checkbox summaries -->
    <string name="prefs_show_hidden">Hidden</string>
    <string name="prefs_show_visible">Shown</string>

    <string name="prefs_not_set">Not set</string>

</resources>
